--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
 
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
     testCompile 'org.robolectric:robolectric:2.4'
